--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/pin_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <meta-data
@@ -27,7 +27,7 @@
 
         <activity
             android:name=".SplashScreenActivity"
-            android:label="@string/title_activity_splash" >
+            android:label="PinTourist" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
